# dp-accelarator

./: .gitignore  Cargo.toml  README.md  benchmark_accuracy_speed.py  benchmark_pld.py  pyproject.toml  test_rusty_dp.py
.github/workflows/: CI.yml  check-signatures.yml  codeql.yml  release.yml
python/dp_accelerator/: __init__.py  _core.pyi  dp_event.py  dp_event_builder.py  gaussian_mechanism.py  jax_privacy.py  mechanism_calibration.py  privacy_accountant.py  rdp.py
python/dp_accelerator/pld/: __init__.py  pld_pmf.py  pld_privacy_accountant.py  privacy_loss_distribution.py
src/: accounting.rs  gaussian.rs  lib.rs  math.rs  pld.rs
tests/: smoke_test.py  test_all_mechanisms.py  test_core.py
