[package]
name = "dp-accelerator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0" }
statrs = "0.16.0"
rustfft = "6.2.0"
libm = "0.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
