[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "dp-accelerator"
version = "0.1.0"
description = "Universal High-Performance Differential Privacy Accounting Engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/AxiomaticLabs/dp-accelerator"
Repository = "https://github.com/AxiomaticLabs/dp-accelerator"

[tool.maturin]
python-source = "python"
module-name = "dp_accelerator._core"
